data/raw_logs/semantic/sem_type.c.log
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_type.c: In function 'main':
/Users/krishtayade/CD_Lab_Project/data/code_snippets/semantic/sem_type.c:1:22: error: initialization of 'int' from 'char *' makes integer from pointer without a cast [-Wint-conversion]
    1 | int main() { int x = "hello"; return 0; }
      |                      ^~~~~~~
